hs_keko.html added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>인덱스 페이지 입니다.</h1>
     <ul>
         <li><a href="kimgura.html">김구라가 만든페이지</a></li>
+        <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
     </ul>
 </body>
 </html>
