--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>인덱스 페이지 입니다.</h1>
     <ul>
-        <li><a href="kimgura.html">김구라가 만든페이지</a></li>
+        <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
     </ul>
 </body>
 </html>
