--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
     
-
+        <li><a href="LCG.html">이충근이 만든 페이지</a></li>
     </ul>
 </body>
 </html>
