--- a/hyungwoo.html
+++ b/hyungwoo.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
+    <title>hyungwoo.html</title>
 </head>
 <body>
-    <h1>인덱스 페이지 입니다.</h1>
-    <ul>
-        <li><a href="kimgura.html">김구라가 만든페이지</a></li>
-        <li><a href="hyungwoo.html"></a></li>
-    </ul>
+    <h1>유형우 입니다.</h1>
 </body>
 </html>
