--- a/uram.html
+++ b/uram.html
@@ -7,7 +7,7 @@
     <title>uram.html</title>
 </head>
 <body>
-    <h1>제가 PUSH를 해냈습니다ㅠㅠ.. 이게 열린다면 성공..!  </h1>
+    <h1> PUSH PUSH !!   </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum error asperiores, dolorum sit molestias ratione neque harum ab aut quo sequi eius sunt dignissimos nostrum consequatur distinctio vitae. Tenetur, unde.</p>
 </body>
 </html>
