kangryunhwa branch added

--- a/kangryunhwa.html
+++ b/kangryunhwa.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>강륜화 페이지~</h1>
+    <p>여기는 강륜화 branch에요~</p>
     <button id="btn">누르기~</button>
 
     <script>
         document.querySelector("#btn").addEventListener("click", function(){
-            alert("짜잔!");
+            alert("여기는 강륜화 branch에요~");
         });
     </script>
 </body>
