--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="eunjung.html">이은정이 만든페이지</a></li>
 
       <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
+
+      <li><a href="heejung.html">김희정이 만든 페이지</a></li>
     </ul>
   </body>
 </html>
