--- a/dayoung.html
+++ b/dayoung.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leedayoung.html</title>
+    <title>dayoung.html</title>
 </head>
 <body>
     <h1>Bigparty 협업자 중 1명</h1>
