--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
         <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
+        <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
     </ul>
   </body>
 </html>
