--- a/index.html
+++ b/index.html
@@ -5,30 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index.html</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <h1>인덱스 페이지 입니다.</h1>
     <ul>
-        <li><a href="kimgura.html">김구라가 만든페이지</a></li>
-        <img src="../../images/kim1.png" alt="김구라 이미지">
-        <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-        <li><a href="kmj.html">강민재가 만든페이지</a></li>
-        <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-        <li><a href="eunjung.html">이은정이 만든페이지</a></li>
-      <li><a href="kimgura.html">김구라가 만든페이지</a></li>
+      <li>
+        <a
+          href="kimgura.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >김구라가 만든페이지</a
+        >
+      </li>
 
+      <li>
+        <a
+          href="hs_keko.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >고현석이 만든페이지</a
+        >
+      </li>
+      <li>
+        <a
+          href="kmj.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >강민재가 만든페이지</a
+        >
+      </li>
+      <li>
+        <a
+          href="kangryunhwa.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >강륜화가 만든 페이지~</a
+        >
+      </li>
+      <li>
+        <a
+          href="eunjung.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >이은정이 만든페이지</a
+        >
+      </li>
 
-        <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
+      <li>
+        <a
+          href="JellyFish.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >최해리가 만든 페이지</a
+        >
+      </li>
 
-        <li><a href="kimgura.html">김구라가 만든페이지</a></li>
-
-        <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-
-      <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-
-        <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-      <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
-        <li><a href="eunjung.html">이은정이 만든페이지</a></li>
+      <li>
+        <a
+          href="kangryunhwa.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >강륜화가 만든 페이지~</a
+        >
+      </li>
+      <li>
+        <a
+          href="SeokWooHyeon.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >석우현이 만든 페이지</a
+        >
+      </li>
+      <li>
+        <a
+          href="eunjung.html"
+          href="#0"
+          class="rlink text-outlined text-outlined_v1"
+          >이은정이 만든페이지</a
+        >
+      </li>
     </ul>
   </body>
 </html>
