--- a/uram.html
+++ b/uram.html
@@ -7,7 +7,7 @@
     <title>uram.html</title>
 </head>
 <body>
-    <h1> PUSH PUSH !!   </h1>
+    <h1>알쏭달쏭 하다@_@</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum error asperiores, dolorum sit molestias ratione neque harum ab aut quo sequi eius sunt dignissimos nostrum consequatur distinctio vitae. Tenetur, unde.</p>
 </body>
 </html>
