--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
       <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
+        <li><a href="uram.html">양우람이 만든 페이지</a></li>
     </ul>
   </body>
 </html>
