--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="kmj.html">강민재가 만든페이지</a></li>
         <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
-<<<<<<< HEAD
+
       <li><a href="kimgura.html">김구라가 만든페이지</a></li>
 
       <li><a href="min.html">이민영이 만든페이지</a></li>
@@ -59,21 +59,21 @@
       <li><a href="kmj.html">강민재가 만든페이지</a></li>
 
 
-=======
+
         <li><a href="kimgura.html">김구라가 만든페이지</a></li>
->>>>>>> 7b521bee260ff84670ecda2c5a343a50147c1bcf
+
         <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
         <li><a href="kimgura.html">김구라가 만든페이지</a></li>
         <li><a href="jieunu.html">html 형식으로 만든 페이지</a></li>
         <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
         <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-<<<<<<< HEAD
+
 
 
       <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
 
         <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-<<<<<<< HEAD
+
 
 
       <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
@@ -81,40 +81,28 @@
 
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
 
-=======
+
       <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
-=======
+
         <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-<<<<<<< HEAD
->>>>>>> 7b521bee260ff84670ecda2c5a343a50147c1bcf
-=======
+
 
         <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
 
 
->>>>>>> 649fb093f64385dbfb780d2bcc09354bd4939b5e
+
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
         <li><a href="jieunu.html">지은우가 만든 페이지</li>
         <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
         <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> origin/main
-=======
-<<<<<<< HEAD
-=======
 
->>>>>>> 649fb093f64385dbfb780d2bcc09354bd4939b5e
+
         <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
         <li><a href="heejung.html">김희정이 만든페이지</a></li>
-<<<<<<< HEAD
->>>>>>> 753dea386abd235f1018c99009ffa9af2bcb1c87
->>>>>>> 348e55ae525ac80690b29e2cdb9797400377e0d7
->>>>>>> 7b521bee260ff84670ecda2c5a343a50147c1bcf
-=======
+        <li><a href="juyeon.html">정주연이 만든페이지</a></li>
+        
 
->>>>>>> 649fb093f64385dbfb780d2bcc09354bd4939b5e
     </ul>
   </body>
 </html>
