--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>인덱스 페이지 입니다.</h1>
     <ul>
 
-<<<<<<< HEAD
+
       <li><a href="kimgura.html">김구라가 만든페이지</a></li>
 
       <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
@@ -48,7 +48,7 @@
 
 
       <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-
+      <li><a href="jh.html">이지현이 만든 페이지</a></li>
 
 
         <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
@@ -97,7 +97,7 @@
 
         <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
         <li><a href="heejung.html">김희정이 만든페이지</a></li>
-=======
+
     <li><a href="kimgura.html">김구라가 만든페이지</a></li>
     <li><a href="kmj.html">강민재가 만든페이지</a></li>
     <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
@@ -113,7 +113,7 @@
     <li><a href="jieunu.html">지은우가 만든 페이지</li>
     <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
     <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
->>>>>>> 14e9799d0f3c5f9f77232d2e05845db51b82684b
+
 
     </ul>
   </body>
