--- a/dayeon.html
+++ b/dayeon.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>충돌싫어...</h1>
+    <h2>취미를 골라봅시다</h2>
+        <form>
+        <fieldset>
+                <legend>취미 정보 선택</legend>
+                <label>
+                    <input type="checkbox" name="hobby" value="movie"> 영화
+                </label>
+                <label>
+                    <input type="checkbox" name="hobby" value="game"> 게임
+                </label>
+                <label>
+                    <input type="checkbox" name="hobby" value="riding"> 자전거
+                </label>
+                <label>
+                    <input type="checkbox" name="hobby" value="etc"> 기타
+                </label>
+        </fieldset>
+        </form>
 </body>
 </html>
