--- a/uram.html
+++ b/uram.html
@@ -7,7 +7,17 @@
     <title>uram.html</title>
 </head>
 <body>
-    <h1>알쏭달쏭 하다@_@</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum error asperiores, dolorum sit molestias ratione neque harum ab aut quo sequi eius sunt dignissimos nostrum consequatur distinctio vitae. Tenetur, unde.</p>
+    <h1>누가 누가 이길까? 가위-바위-보오 게임!</h1>
+    <button id="startBtn">승자는?</button><br/>
+    <canvas id="myCanvas" width="800" height="300"></canvas>
+    <script>
+        let isStarted=false;
+
+        let canvas=document.querySelector("#myCanvas");
+        let context=canvas.getContext("2d");
+
+  
+    </script>
+    
 </body>
 </html>
