--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
         <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
         <li><a href="heejung.html">김희정이 만든 페이지</a></li>
-        <li><a href="hyungwoo.html"></a></li>
+        <li><a href="hyungwoo.html">형우</a></li>
         <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
         <li><a href="min.html">이민영이 만든페이지</a></li>
         <li><a href="jh.html">이지현이 만든 페이지</a></li>
         <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
-        <li><a href="jieunu.html">지은우가 만든 페이지</li>
-        <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
-        <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
+        <li><a href="jieunu.html">지은우가 만든 페이지</a></li>
+        <li><a href="gyuhwan.html">김규환이 만든 페이지</a></li>
+        <li><a href="hyunmi.html">신현미가 만든 페이지</a></li>
         <li><a href="dayeon.html">김다연이 만든페이지</a></li>
-        <li><a href="LCG.html">이충근이 만든 페이지</a></li>
+        <li><a href="LCG.html">이충근이 만든 페이지</a></li>   
+        <li><a href="keunyeong.html">이근영이 만든 페이지</a></li>
+
+
     </ul>
   </body>
 </html>
