--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="eunjung.html">이은정이 만든페이지</a></li>
         <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
         <li><a href="heejung.html">김희정이 만든 페이지</a></li>
-        <li><a href="hyungwoo.html"></a></li>
+        <li><a href="hyungwoo.html">유형우가 만든 페이지</a></li>
         <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
         <li><a href="min.html">이민영이 만든페이지</a></li>
         <li><a href="jh.html">이지현이 만든 페이지</a></li>
