--- a/SeokWooHyeon.html
+++ b/SeokWooHyeon.html
@@ -5,13 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>(～￣▽￣)～</title>
+    <style>
+      body {
+        background-color: #fcf6f5;
+        color: #7b9acc;
+        text-align: center;
+      }
+      ul {
+        padding: 0;
+        list-style: none;
+        font-size: 24px;
+      }
+      li {
+        margin: 10px 0;
+      }
+      a {
+        text-decoration: none;
+      }
+      a:link {
+        color: #7b9acc;
+      }
+      a:visited {
+        color: #7b9acc;
+      }
+    </style>
   </head>
   <body>
     <div>
       <h1>유용한 사이트 모음</h1>
       <ul>
         <li><a href="https://2colors.colorion.co/">2컬러 조합 모음</a></li>
-        <li></li>
+        <li><a href="https://wwit.design/">어플 ui 모음 </a></li>
         <li></li>
       </ul>
     </div>
