--- a/index.html
+++ b/index.html
@@ -5,46 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index.html</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <h1>인덱스 페이지 입니다.</h1>
     <ul>
-
-      <li><a href="kimgura.html">김구라가 만든페이지</a></li>
-      <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
-      <li><a href="kmj.html">강민재가 만든페이지</a></li>
-      <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-      <li><a href="eunjung.html">이은정이 만든페이지</a></li>
-      <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
-      <li><a href="heejung.html">김희정이 만든 페이지</a></li>
-
+        <li><a href="kimgura.html">김구라가 만든페이지</a></li>
+        <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
+        <li><a href="kmj.html">강민재가 만든페이지</a></li>
+        <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
+        <li><a href="eunjung.html">이은정이 만든페이지</a></li>
+        <li><a href="SeokWooHyeon.html">석우현이 만든 페이지</a></li>
+        <li><a href="heejung.html">김희정이 만든 페이지</a></li>
         <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
         <li><a href="gyuhwan.html">김규환이 만든 페이지</a></li>
         <li><a href="jieunu.html">지은우가 만든 페이지</a></li>
-        <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
-        <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
-        <li><a href="jieunu.html">html 형식으로 만든 페이지</a></li>
         <li><a href="jieunu.html">지은우가 만든 페이지</li>
         <li><a href="keunyeoun.html">이근영이 만든페이지</a></li>
-
-      <li><a href="kimgura.html">김구라가 만든페이지</a></li>
-      <li><a href="kmj.html">강민재가 만든페이지</a></li>
-      <li><a href="kangryunhwa.html">강륜화가 만든 페이지~</a></li>
-
-      <li><a href="min.html">이민영이 만든페이지</a></li>
-      <li><a href="cholekim.html">김나현이 만든 페이지</a></li>
-      <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
-      <li><a href="jieunu.html">지은우가 만든 페이지</li>
-      <li><a href="gyuhwan.html">김규환이 만든 페이지</a></li>
-      <li><a href="hyunmi.html">신현미가 만든 페이지</a></li>
-      <li><a href="heejung.html">김희정이 만든페이지</a></li>
-      <li><a href="juyeon.html">정주연이 만든페이지</a></li>
-      <li><a href="Kangheeeun.html">강희은이 만든페이지</a></li>
-      <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
-      <li><a href="hyungwoo.html">유형우가 만든 페이지</a></li>
-      <li><a href="jh.html">이지현이 만든 페이지</a></li>
-      <li><a href="hyerim.html">윤혜림이 만든 페이지</a></li>
-      <li><a href="juyeon.html">정주연이 만든 페이지</a></li>
+        <li><a href="min.html">이민영이 만든페이지</a></li>
+        <li><a href="cholekim.html">김나현이 만든 페이지</a></li>
+        <li><a href="hyunmi.html">신현미가 만든 페이지</a></li>
+        <li><a href="juyeon.html">정주연이 만든페이지</a></li>
+        <li><a href="Kangheeeun.html">강희은이 만든페이지</a></li>
+        <li><a href="hyungwoo.html">유형우가 만든 페이지</a></li>
+        <li><a href="jh.html">이지현이 만든 페이지</a></li>
+        <li><a href="hyerim.html">윤혜림이 만든 페이지</a></li>
+        <li><a href="juyeon.html">정주연이 만든 페이지</a></li>
     </ul>
   </body>
 </html>
