--- a/gyuhwan.html
+++ b/gyuhwan.html
@@ -9,25 +9,72 @@
 <body>
     <h1>이번 주의 로또 번호를 알려드리겠습니다 !.! </h1>
     <div id="box">
-    <img id ="img" src="c:/acorn202104/visual_work/html/images/kim1.png" alt="">
+    <img id ="img" src="c:/acorn202104/visual_work/html/images/thanos.jpg" height="300" width="600" alt="">
+    <p>Thanos : I am inevitable lucky guy~</p>
     <br>
     </div>
     <br>
-    <button id="Btn">자! 갑시다!</button>
+    <button id="Btn">두 번 클릭!</button>
+    <button id="Bonus">보너스~</button>
     <script>
         let list =[];
         document.querySelector("#Btn").addEventListener("click", function(){
             div = document.querySelector("#box")
-            for(let i=0; i<6; i++){
+            for(let i=0; i<20; i++){
                 let ranNum = Math.floor(Math.random()*45);
                 let ran = ranNum+1;
                 list.push(ran);
+                for(let j=0; j<i; j++){
+                    if(i!=j && list[i]==list[j]){
+                        list.splice(i,1)
+                    } else if(list.length==6){
+                        return;
+                    }
+                }
+                if(list.length==6){
+                    return;
+                }
+               
+            }
+            for(let i=0; i<6; i++){
+                    let ran2=list[i]+1;
+                    let img = document.createElement("img");
+                    let path = "c:/acorn202104/visual_work/html/images/lotto-ball-" + ran2 + ".png"
+                    img.setAttribute("src", path)
+                    img.setAttribute("class", "ball")
+                    img.setAttribute("height", "100");
+                    img.setAttribute("width", "100");
+                    div.append(img); 
+            }
+            div = document.querySelectorAll(".class")
+            if(div.length>8){
+                b = document.createElement("br")
+                div.append(b);
+            }
+
+            /*    
                 let img = document.createElement("img");
                 let path = "c:/acorn202104/visual_work/html/images/lotto-ball-" + ran + ".png"
                 img.setAttribute("src", path)
-                img.setAttribute("height", "200");
-                img.setAttribute("width", "200");
+                img.setAttribute("height", "100");
+                img.setAttribute("width", "100");
                 div.append(img);
+            */
+        })
+        document.querySelector("#Bonus").addEventListener("click", function(){
+            div = document.querySelector("#box")
+            for(let i=0; i<6; i++){
+                let ranNum = Math.floor(Math.random()*45);
+                let ran = ranNum+1;
+                if(list[i] != ran){
+                    let img = document.createElement("img");
+                    let path = "c:/acorn202104/visual_work/html/images/lotto-ball-" + ran + ".png"
+                    img.setAttribute("src", path)
+                    img.setAttribute("height", "100");
+                    img.setAttribute("width", "100");
+                    div.append(img);
+                    return;
+                }
             }
         })
     </script>
