hyunmi.html edited!

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="hs_keko.html">고현석이 만든페이지</a></li>
         <li><a href="jieunu.html">지은우가 만든 페이지</li>
         <li><a href="gyuhwan.html"></a>김규환이 만든 페이지</li>
-        <li><a href="hyunmi.html"></a>신현미가 만든 페이지</li>
+        <li><a href="hyunmi.html">신현미가 만든 페이지</a></li>
         <li><a href="hyerim.html"></a>윤혜림이 만든 페이지</li>
     </ul>
   </body>
