--- a/hyerim.html
+++ b/hyerim.html
@@ -6,35 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hyerim.html</title>
     <style>
+        #mainContainer{
+            width: 1000px;
+            height: 700px;
+            background-color: lightgoldenrodyellow;
+        }
+        h1,h3{
+            text-align: center;
+        }
+        h1{
+            padding-top: 50px;
+        }
+        h3{
+            padding-bottom: 100px;
+        }
         #getBtn{
+            margin-left: 400px;
             width: 200px;
             height: 80px;
             color: white;
             background-color: blue;
         }
+        #container{
+            margin-top: 100px;
+            text-align: center;
+            font: bold 40px/64px consolas;
+        }
+        #rColor{
+            display: inline-block ;
+        }
+        #R{
+            float: right;
+        }
+        #gColor{
+            display: inline-block ;
+        }
+        #G{
+            float: right;
+        }
+        #bColor{
+            display: inline-block ;
+        }
+        #B{
+            float: right;
+        }
+        #link{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <h1>윤혜림이 만들었습니다.</h1>
-    <h3>당신의 행운의 색상은?</h3>
-    <button id="getBtn">행운컬러</button>
-    <div>나의 컬러는?<br/>
-        <div>R = <p id="R"></p></div>
-        <div>G = <p id="G"></p></div>
-        <div>B = <p id="B"></p></div>
+    <div id="mainContainer">
+        <h1>윤혜림이 만들었습니다.</h1>
+        <h3>당신의 행운의 색상은?</h3>
+        <button id="getBtn">행운컬러</button>
+        <div id="container">나의 행운의 컬러는?<br/>
+            <div id = rColor>R = 
+                <div id="R"></div>
+            </div>
+            <div id = gColor>G = 
+                <div id="G"></div>
+            </div>
+            <div id = bColor>B = 
+                <div id="B"></div>
+            </div>
+        </div>
+        <div id="link">
+            <p> 숫자를 기억하고 하단의 링크로 들어가서 숫자를 기입해보세요.</p>
+            <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query=%EC%83%89%EC%83%81%ED%8C%94%EB%A0%88%ED%8A%B8">RGB표 검색</a>
+        </div>
+        <script>
+            
+            document.querySelector("#getBtn").addEventListener("click", function(){
+                let r = Math.floor(Math.random()*256);
+                document.querySelector("#R").innerText=r;
+                let g = Math.floor(Math.random()*256);
+                document.querySelector("#G").innerText=g;
+                let b = Math.floor(Math.random()*256);
+                document.querySelector("#B").innerText=b;
+            });
+        </script>
     </div>
-
-    <script>
-        
-        document.querySelector("#getBtn").addEventListener("click", function(){
-            let r = Math.floor(Math.random()*256);
-            document.querySelector("#R").innerText=r;
-            let g = Math.floor(Math.random()*256);
-            document.querySelector("#G").innerText=g;
-            let b = Math.floor(Math.random()*256);
-            document.querySelector("#B").innerText=b;
-        });
-    </script>
-
 </body>
 </html>
