--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="JellyFish.html">최해리가 만든 페이지</a></li>
             <li><a href="gyuhwan.html">김규환이 만든 페이지</a></li>
             <li><a href="jieunu.html">지은우가 만든 페이지</a></li>
-            <li><a href="keunyeoun.html">이근영이 만든페이지</a></li>
+            <li><a href="keunyeoung.html">이근영이 만든페이지</a></li>
             <li><a href="min.html">이민영이 만든페이지</a></li>
             <li><a href="cholekim.html">김나현이 만든 페이지</a></li>
             <li><a href="hyunmi.html">신현미가 만든 페이지</a></li>
