--- a/keunyeong.html
+++ b/keunyeong.html
@@ -7,6 +7,31 @@
   <title>keunyeong.html</title>
 </head>
 <body>
-  <h1>이근영이 만든 html</h1>
+  <h1>이근영이 만든 페이지 입니다.</h1>
+  <h2>영어로 끝말있기하기</h2>
+  <div id="div">zero</div>
+  <form action="submit" id="form">
+    <input type="text" id="input1">
+    <button id="bt">입력!</button>
+  </form>
+  <div id="result1">끝말잇기~</div>
+  <script>
+  const word = document.querySelector("#div")
+  const input = document.querySelector("#input1")
+  const result = document.querySelector("#result1")
+  document.querySelector("#form").addEventListener('submit', function (e) {
+    e.preventDefault();
+    if (word.innerText[word.innerText.length - 1] === input.value[0]) {
+      result.innerText = 'Good!';
+      word.innerText = input.value;
+      input.value = '';
+      input.focus();
+    } else {
+      result.innerText = 'BAD!!';
+      input.value = '';
+      input.focus();
+    }
+  });
+  </script>
 </body>
 </html>
