--- a/keunyeong.html
+++ b/keunyeong.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>이근영이 만든 페이지 입니다.</h1>
-  <h2>영어로 끝말있기하기</h2>
+  <h2>영어로 끝말잇기하기</h2>
   <div id="div">zero</div>
   <form action="submit" id="form">
     <input type="text" id="input1">
