--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="hyerim.html">윤혜림이 만든 페이지</a></li>
             <li><a href="carousel.html">3dCarousel</a></li>
             <li><a href="mkkk.html">강민경이 만든 페이지</a></li>
+            <li><a href="jieun.html">고지은이 만든 페이지</a></li>
     </ul>
   </body>
 </html>
