--- a/uram.html
+++ b/uram.html
@@ -14,8 +14,10 @@
 </head>
 <body>
     <h1>누가 누가 이길까? 가위-바위-보오 게임!</h1>
-    <button id="startBtn">게임 시작!</button><br/>
+    <button id="startBtn">게임 시작!</button>
     <button id="stopBtn">결과는?</button><br/>
+
+    <br>
     <canvas id="myCanvas" width="800" height="300"></canvas>
     <script>
         let isStarted=false;
@@ -35,14 +37,17 @@
 
         const oneHands=[rock, Scissors, Bo, rock, Bo];
         const twoHands=[Bo, rock, Bo, Scissors, rock];
-
+        
         function drawCanvas(){
+
             context.drawImage(oneHands[handIndex],0,0,300,300);
             context.drawImage(twoHands[handIndex],500,0,300,300)};
 
+        function textCanvas(){
             context.font="85px Consolas";
             context.fillStyle="black";
             context.fillText("VS", 350, 160);
+        }
 
         function handsAni(){
             if(count%10 == 0){
@@ -68,6 +73,7 @@
 
         document.querySelector("#startBtn").addEventListener("click", function(){
             isStarted=true;
+            textCanvas();
         });
 
         document.querySelector("#stopBtn").addEventListener("click", function(){
